--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -21,7 +21,7 @@ import Title from "../shared/Title.astro";
         </div>
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
-                Pack Stellar 1999DH
+                Pack Stellar
             </Title>
             <Paragraph className="mt-8">
                 Le Pack Stellar Plus est une offre avancée de marketing des médias sociaux qui offre une couverture complète pour les entreprises cherchant à maximiser leur présence en ligne et à stimuler leur croissance. Cette offre est conçue pour les entreprises qui ont des besoins de marketing plus complexes et qui cherchent à obtenir des résultats optimaux.
