--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -10,7 +10,7 @@ import Title from "../shared/Title.astro";
         
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
-                Pack Stellar Plus 3499DH
+                Pack Stellar Plus
             </Title>
             <Paragraph className="mt-8">
                 Le Pack Stellar Plus est une offre avancée de marketing des médias sociaux qui offre une couverture complète pour les entreprises cherchant à maximiser leur présence en ligne et à stimuler leur croissance. Cette offre est conçue pour les entreprises qui ont des besoins de marketing plus complexes et qui cherchent à obtenir des résultats optimaux.
