--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -6,7 +6,7 @@ import Title from "../shared/Title.astro";
 
 ---
 
-<section id="packs">
+<!--<section id="packs">
     <Container className="flex flex-col midmd:flex-row gap-10 lg:gap-12">
         <div class="max-w-md mx-auto midmd:max-w-none lg:mx-0  lg:pr-10 xl:pr-2 flex-1 flex w-11/12 midmd:w-5/12 lg:w-1/2 midmd:h-auto">
             <div class="w-full h-80 sm:h-96 midmd:h-full relative">
@@ -54,4 +54,4 @@ import Title from "../shared/Title.astro";
             </ul>
         </div>
     </Container>
-</section>
+</section>-->
