--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -5,7 +5,7 @@ import Title from "../shared/Title.astro";
 
 ---
 
-<section id="features">
+<!--<section id="features">
     <Container className="flex flex-col midmd:flex-row gap-10 lg:gap-12">
         
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
@@ -46,4 +46,4 @@ import Title from "../shared/Title.astro";
             </div>
         </div>
     </Container>
-</section>
+</section>-->
