remove pack stellar plus

--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -37,12 +37,6 @@ const footerSupport = [
     }
 ]
 
-const footerCompany = [
-    {
-        itemText:"Packs",
-        itemLink:"#packs"
-    },
-]
 const footerLegal = [
     {
         itemText:"Accueil",
@@ -125,7 +119,7 @@ const footerLegal = [
             </div>
 
             <GroupFooterNav>
-                <FooterNav title={"Packs"} navItems={footerCompany}/>
+                <!--<FooterNav title={"Packs"} navItems={footerCompany}/>-->
                 <FooterNav title={"Services"} navItems={footerNav1}/>
             </GroupFooterNav>
 
